changed navbar html

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,2 @@
 <p>navbar works!</p>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque perspiciatis qui itaque culpa deserunt quas, incidunt dolorem eum? Eveniet dolore ea dolor alias temporibus, quis doloribus nesciunt sint debitis magnam?</p>
