--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a routerLink="home">
-        <img src="/assets/images/saucy_hedgehog.png" width="100" height="100" class="d-inline-block align-top" alt="">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-              <a routerLink="../locations" class="nav-link active">Locations</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+<nav class="navbar navbar-custom navbar-expand-lg">
+  <div class="container-fluid">
+    <a routerLink="home">
+      <img src="/assets/images/saucy_hedgehog.png" width="100" height="100" class="d-inline-block align-top" alt="">
+    </a>
+    <a routerLink="home" class="nav-link nav-item active" href="#">MENU</a>
+    <a routerLink="../locations" class="nav-link nav-item active">LOCATIONS</a>
+  </div>
 </nav>
