Updated Navbar and small changes to home page.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,27 @@
-<p>home works!</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio amet sequi a consequuntur quisquam modi natus quas qui earum dolores, ullam, quos repellat, iste deserunt? Corrupti, incidunt! Qui, cupiditate modi.</p>
+<div class="background">
+    <div class="container">
+        <div class="col">
+        </div>
+
+        <div class="col">
+            <div class="logo">
+                <img src="/assets/images/saucy_hedgehog.png" width="200" height="200" class="mx-auto d-block" alt="">
+            </div>
+
+            <p class="paragraph">
+                <span style="font-size: 24px; font-weight: bold">HOURS</span><br>
+                Monday: 7:00 AM - 9:00 PM<br>
+                Tuesday: 7:00 AM - 9:00 PM<br>
+                Wednesday: 7:00 AM - 9:00 PM<br>
+                Thursday: 7:00 AM - 9:00 PM<br>
+                Friday: 7:00 AM - 9:00 PM<br>
+                Saturday: 7:00 AM - 9:00 PM<br>
+                Sunday: 7:00 AM - 9:00 PM
+            </p>
+        </div>
+
+        <div class="col">
+        </div>
+    </div>
+</div>
+
