--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-custom navbar-expand-lg">
-  <div class="container-fluid">
-    <a routerLink="home">
-      <img src="/assets/images/saucy_hedgehog.png" width="100" height="100" class="d-inline-block align-top" alt="">
-    </a>
-    <a routerLink="home" class="nav-link nav-item active" href="#">MENU</a>
+<ul class="nav justify-content-center custom">
+  <li class="nav-item">
+    <a routerLink="home" class="nav-link nav-item active">HOME</a>
+  </li>
+  <li class="nav-item">
+    <a routerLink="home" class="nav-link nav-item active">MENU</a>
+  </li>
+  <li class="nav-item">
     <a routerLink="../locations" class="nav-link nav-item active">LOCATIONS</a>
-  </div>
-</nav>
+  </li>
+</ul>
