--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,33 @@
 <div class="background">
     <div class="container">
-        <div class="col">
-        </div>
-
-        <div class="col">
-            <div class="logo">
-                <img src="/assets/images/saucy_hedgehog.png" width="200" height="200" class="mx-auto d-block" alt="">
+        <div class="row">
+            <div class="col">
             </div>
 
-            <p class="paragraph">
-                <span style="font-size: 24px; font-weight: bold">HOURS</span><br>
-                Monday: 7:00 AM - 9:00 PM<br>
-                Tuesday: 7:00 AM - 9:00 PM<br>
-                Wednesday: 7:00 AM - 9:00 PM<br>
-                Thursday: 7:00 AM - 9:00 PM<br>
-                Friday: 7:00 AM - 9:00 PM<br>
-                Saturday: 7:00 AM - 9:00 PM<br>
-                Sunday: 7:00 AM - 9:00 PM
-            </p>
-        </div>
+            <div class="col-6">
+                <div class="logo">
+                    <img src="/assets/images/saucy_hedgehog.png" width="200" height="200" class="mx-auto d-block" alt="">
+                </div>
 
-        <div class="col">
+                <p class="about">
+                    <span style="font-size: 24px; font-weight: bold">ABOUT</span><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est corrupti asperiores ipsam ratione ut esse dolorum, assumenda atque dolor? Eum exercitationem libero voluptatibus, ratione corporis culpa? Deserunt eaque nesciunt aperiam.
+                </p>
+
+                <p class="paragraph">
+                    <span style="font-size: 24px; font-weight: bold">HOURS</span><br>
+                    Monday: 7:00 AM - 9:00 PM<br>
+                    Tuesday: 7:00 AM - 9:00 PM<br>
+                    Wednesday: 7:00 AM - 9:00 PM<br>
+                    Thursday: 7:00 AM - 9:00 PM<br>
+                    Friday: 7:00 AM - 9:00 PM<br>
+                    Saturday: 7:00 AM - 9:00 PM<br>
+                    Sunday: 7:00 AM - 9:00 PM
+                </p>
+            </div>
+
+            <div class="col">
+            </div>
         </div>
     </div>
 </div>
-
