--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<ul class="nav justify-content-center custom">
+<ul class="nav justify-content-center custom sticky-top">
   <li class="nav-item">
     <a routerLink="home" class="nav-link nav-item active">HOME</a>
   </li>
