--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,22 +7,33 @@
             <div class="col-6">
                 <div class="logo">
                     <img src="/assets/images/saucy_hedgehog.png" width="200" height="200" class="mx-auto d-block" alt="">
-                </div>
+                </div><hr>
 
                 <p class="about">
                     <span style="font-size: 24px; font-weight: bold">ABOUT</span><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est corrupti asperiores ipsam ratione ut esse dolorum, assumenda atque dolor? Eum exercitationem libero voluptatibus, ratione corporis culpa? Deserunt eaque nesciunt aperiam.
-                </p>
+                    The Spicy Hedgehog is a family friendly restaurant that specializes in typically American cuisine with a spicy twist. We serve breakfast, lunch, and dinner, and our entire menu is available the entire day.
+                </p><hr>
 
                 <p class="paragraph">
                     <span style="font-size: 24px; font-weight: bold">HOURS</span><br>
-                    Monday: 7:00 AM - 9:00 PM<br>
-                    Tuesday: 7:00 AM - 9:00 PM<br>
-                    Wednesday: 7:00 AM - 9:00 PM<br>
-                    Thursday: 7:00 AM - 9:00 PM<br>
-                    Friday: 7:00 AM - 9:00 PM<br>
-                    Saturday: 7:00 AM - 9:00 PM<br>
-                    Sunday: 7:00 AM - 9:00 PM
+                    Monday: 6:00 AM - 9:00 PM<br>
+                    Tuesday: 6:00 AM - 9:00 PM<br>
+                    Wednesday: 6:00 AM - 9:00 PM<br>
+                    Thursday: 6:00 AM - 9:00 PM<br>
+                    Friday: 6:00 AM - 11:00 PM<br>
+                    Saturday: 8:00 AM - 11:00 PM<br>
+                    Sunday: 8:00 AM - 9:00 PM
+                </p><hr>
+
+                <p class="about">
+                    <span style="font-size: 24px; font-weight: bold">DAILY SPECIAL</span><br>
+                    Monday: Item 1 <br>
+                    Tuesday: Item 2 <br>
+                    Wednesday: Item 3 <br>
+                    Thurday: Item 4 <br>
+                    Friday: Item 5 <br>
+                    Saturday: Item 6 <br>
+                    Sunday: Item 7
                 </p>
             </div>
 
