--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -40,7 +40,7 @@
             <ul><a href="{{location.map_url}}">Directions</a></ul>
           
             <div *ngIf="isAdmin">
-              <button class="btn btn-primary" (click)="deleteLocation(location)">Delete Location</button>
+              <ul><button class="btn btn-primary" (click)="deleteLocation(location)">Delete Location</button></ul>
             </div>
           </div>
         </div>
