--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a routerLink="home" class="nav-link nav-item active">HOME</a>
   </li>
   <li class="nav-item">
-    <a routerLink="home" class="nav-link nav-item active">MENU</a>
+    <a routerLink="menu" class="nav-link nav-item active">MENU</a>
   </li>
   <li class="nav-item">
     <a routerLink="../locations" class="nav-link nav-item active">LOCATIONS</a>
