added logic to drive login

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <p class="info-login">
-        @2021 The Saucy Hedgehog | <a routerLink="home" class="admin-login">Log In</a>
+        @2021 The Saucy Hedgehog | 
+        <a routerLink="login" class="admin-login" *ngIf="!loggedIn">Login</a>
+        <a routerLink="login" class="admin-login" *ngIf="loggedIn">Logout</a>
     </p>
 </footer>
