Finshed some syling have to fix the remove button in menu item and how items load in

--- a/src/app/menu-category-add-card/menu-category-add-card.component.html
+++ b/src/app/menu-category-add-card/menu-category-add-card.component.html
@@ -1,7 +1,6 @@
-<divclass="container">
+<div class="container">
     <h1>Add Food Category</h1>
     <div class="card">
- 
       <div class="card-body">
         <div class="form-group">
           <input class="form-control" type="text" [(ngModel)]="name" placeholder="Food Category Name">
@@ -13,7 +12,7 @@
           <input class="form-control" type="text" [(ngModel)]="picture" placeholder="Food Category Picture URL">
         </div>
         <div class="form-group">
-          <button class="btn btn-primary" (click)="Add()">Add Food Catigorie</button>
+          <button class="btn btn-primary" (click)="add()">Add Food Catigorie</button>
         </div>
       </div>
     </div>
