--- a/src/app/menu-category-page/menu-category-page.component.html
+++ b/src/app/menu-category-page/menu-category-page.component.html
@@ -1,17 +1,11 @@
-<app-menu-category-add-card *ngIf='admin'></app-menu-category-add-card>
+<app-menu-category-add-card (refreshData)="refreshData()" *ngIf='admin'></app-menu-category-add-card>
 <div class="container">
     <h1> Food Categories</h1>
-    <div class="row">
-        <div *ngFor="let menuCat of this.menuservice.menuCatigories; index as i;">
-            <div id="left" *ngIf="0==i%3" class="col-sm">
-                <app-menu-category-card [index]="i"></app-menu-category-card>
-            </div>>
-            <div id="mid" *ngIf="1==i%3" class="col-sm">
-                <app-menu-category-card [index]="i"></app-menu-category-card>
-            </div>
-            <div id="right" *ngIf="2==i%3" class="col-sm">
-                <app-menu-category-card [index]="i"></app-menu-category-card>
+    
+<div class="grid-container">
+        <div *ngFor="let menuCat of menuCategories; index as i;">
+            <div class="grid-item">
+                <app-menu-category-card  [index]="i"></app-menu-category-card>
             </div>
         </div>
-    </div>
 </div>
