--- a/src/app/menu-item-card/menu-item-card.component.html
+++ b/src/app/menu-item-card/menu-item-card.component.html
@@ -1,7 +1,7 @@
-<div (click)="OnClick()" *ngIf="!selected">
-  <div class="card" style="width: 18rem; height: 200px;">
+<div (click)="OnClick()" >
+  <div class="card" style="width: 18rem; height: 200px; background-color: coral;">
     <img class="card-img-top" [src]="menuItem.image" alt="Card image cap">
-    <div class="card-body">
+    <div class="card-body" style="background-color: coral;">
       <p class="card-text">{{menuItem.name}}</p>
     </div>
   </div>
