--- a/src/app/menu-item-page/menu-item-page.component.html
+++ b/src/app/menu-item-page/menu-item-page.component.html
@@ -1,21 +1,15 @@
 <div *ngIf='admin'>
   <app-menu-category-edit></app-menu-category-edit>
-  <app-menu-item-card-add></app-menu-item-card-add>
+  <app-menu-item-card-add (refreshData)="refreshData()"></app-menu-item-card-add>
 </div>
 <div class="container">
   <h1>Food Items</h1>
-  <div class="row">
+  <div class="grid-container">
       <div *ngFor="let menuItem of menuItems; index as i">
-          <div class="col-sm">
-              <app-menu-card *ngIf="0==i%3" [index]='i'></app-menu-card>
-          </div>
-          <div class="col-sm">
-              <app-menu-card *ngIf="1==i%3" [index]='i'></app-menu-card>
-          </div>
-          <div class="col-sm">
-              <app-menu-card *ngIf="2==i%3" [index]='i'></app-menu-card>
+          <div class=".grid-item">
+              <app-menu-item-card [index]='i'></app-menu-item-card>
           </div>
       </div>
   </div>
 </div>
-<button (click)="back()">back</button>
+<button class="btn btn-primary"  (click)="back()">back</button>
