--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <h4 class="card-header">Register</h4>
+<div class="card mx-auto my-4" style="width: 25%;">
+    <h4 class="card-header" style="background-color: #fd7e14; color: white">Register</h4>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
