--- a/src/app/menu-item-card/menu-item-card.component.html
+++ b/src/app/menu-item-card/menu-item-card.component.html
@@ -1,9 +1,11 @@
+<div class="container">
 <div (click)="OnClick()" >
   <div class="card" style="width: 18rem; height: 200px; background-color: coral;">
     <img class="card-img-top" [src]="menuItem.image" alt="Card image cap">
-    <div class="card-body" style="background-color: coral;">
+    <div class="card-body" >
       <p class="card-text">{{menuItem.name}}</p>
     </div>
   </div>
 </div>
-<button (click)="remove()" class="btn btn-primary">Remove</button>
+<button  (click)="remove()" class="btn btn-primary">Remove</button>
+</div>
