--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -4,7 +4,7 @@
       </div>
 
       <div class="col-6">
-        <div *ngIf="isAdmin">
+        <div *ngIf="loggedIn">
           <div class="holder">
             <h1>Admin - Add Location</h1>
             <div class="card">
@@ -39,7 +39,7 @@
                 <ul>Address: {{location.address}}</ul>
                 <ul>Phone Number: {{location.phone_number}}</ul>
                 <ul><a href="{{location.map_url}}">Directions</a></ul>
-              <div *ngIf="isAdmin">
+              <div *ngIf="loggedIn">
                 <ul *ngIf='locationToEdit != location'>
                   <button class="btn btn-primary" (click)="editLocation(location)">Edit Location</button>
                   <button class="btn btn-primary" (click)="deleteLocation(location)">Delete Location</button>
@@ -66,12 +66,10 @@
                 <label for="phone_number">Phone Number:</label>
                 <input name="phone_number" class="form-control" type="text" [(ngModel)]="locationToEdit.phone_number">
               </ul>
-              <div *ngIf="isAdmin">
-                <ul *ngIf="locationToEdit == location">
-                  <button class="btn btn-primary" (click)="saveLocation(location)">Save</button>
-                  <button class="btn btn-primary" (click)="cancel()">Cancel</button>
-                </ul>
-              </div>
+              <ul *ngIf="locationToEdit == location">
+                <button class="btn btn-primary" (click)="saveLocation(location)">Save</button>
+                <button class="btn btn-primary" (click)="cancel()">Cancel</button>
+              </ul>
             </div>
           </div>
         </div>
