done with styleing still need to get very thing to center on the page though

--- a/src/app/menu-category-card/menu-category-card.component.html
+++ b/src/app/menu-category-card/menu-category-card.component.html
@@ -1,6 +1,6 @@
 
 <div (click)="onClick()">
-    <div class="card" style="width: 18rem; height: 250px;">
+    <div class="card" style="width: 18rem; height: 250px; background-color: coral;">
         <img width = "190" height = "190" class="card-img-top" [src]="category.image" alt="Card image cap">
         <div class="card-body">
             <p class="card-text">{{category.name}}</p>
