--- a/src/app/menu-item-description-page/menu-item-description-page.component.html
+++ b/src/app/menu-item-description-page/menu-item-description-page.component.html
@@ -1,5 +1,7 @@
 <app-menu-item-card-edit *ngIf='admin'></app-menu-item-card-edit>
-<img [src]="menuItem.image">
 <h1>{{menuItem.name}}</h1>
+<img [src]="menuItem.image" height="400" width="400">
+<section>
 <p>{{menuItem.description}}</p>
 <button class="btn btn-primary" (click)="back()">Back</button>
+</section>
