complete the admin login implementation

--- a/src/app/menu-item-card/menu-item-card.component.html
+++ b/src/app/menu-item-card/menu-item-card.component.html
@@ -7,5 +7,5 @@
     </div>
   </div>
 </div>
-<button  (click)="remove()" class="btn btn-primary">Remove</button>
+<button *ngIf="admin" (click)="remove()" class="btn btn-primary">Remove</button>
 </div>
