Implemented daily special feature.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,13 +27,13 @@
 
                 <p class="about">
                     <span style="font-size: 24px; font-weight: bold">DAILY SPECIAL</span><br>
-                    Monday: Item 1 <br>
-                    Tuesday: Item 2 <br>
-                    Wednesday: Item 3 <br>
-                    Thurday: Item 4 <br>
-                    Friday: Item 5 <br>
-                    Saturday: Item 6 <br>
-                    Sunday: Item 7
+                    Monday: {{dailySpecials[0]}} <br>
+                    Tuesday: {{dailySpecials[1]}} <br>
+                    Wednesday: {{dailySpecials[2]}} <br>
+                    Thurday: {{dailySpecials[3]}} <br>
+                    Friday: {{dailySpecials[4]}} <br>
+                    Saturday: {{dailySpecials[5]}} <br>
+                    Sunday: {{dailySpecials[6]}}
                 </p>
             </div>
 
