--- a/src/app/locations/locations.component.css
+++ b/src/app/locations/locations.component.css
@@ -11,7 +11,7 @@ h1{
   margin: 5px;
 }
 .card-header {
-  background-color: #FFB37F;
+  background-color: #fd7e14;
 }
 .locations {
   text-align: center;
