--- a/src/app/menu-item-page/menu-item-page.component.css
+++ b/src/app/menu-item-page/menu-item-page.component.css
@@ -1,10 +1,19 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  padding: 10px;
-}
-.grid-item {
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-}
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+  
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .previous {
+    background-color: coral;
+    color: white;
+  }
+  
+  .round {
+    border-radius: 50%;
+  }
