changed menu card styling

--- a/src/app/menu-category-card/menu-category-card.component.html
+++ b/src/app/menu-category-card/menu-category-card.component.html
@@ -7,7 +7,7 @@
             {{category.name}}
         </h5>
         <div class="overlay">
-            <div class="text">{{category.description}}</div>
+            <div class="text"><p>{{category.description}}</p></div>
         </div>
     </div>
 </div>
