--- a/src/app/menu-category-card/menu-category-card.component.css
+++ b/src/app/menu-category-card/menu-category-card.component.css
@@ -17,7 +17,7 @@ img{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: coral;;
+    background-color: rgba(255, 127, 80, .8);
     overflow: hidden;
     width: 100%;
     height: 0;
@@ -29,9 +29,9 @@ img{
   }
   
   .text {
-    white-space: nowrap; 
     color: white;
-    font-size: 20px;
+    font-weight: bold;
+    font-size: 15px;
     position: absolute;
     overflow: hidden;
     top: 50%;
