added building photos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,21 @@
-<div class="background">
+<div class="background" style="background-image: url('/assets/images/Restaraunt_Interior.png');">
     <div class="container">
         <div class="row">
             <div class="col">
             </div>
 
-            <div class="col-6">
+            <div class="col-6" style="box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, .9);">
                 <div class="logo">
                     <img src="/assets/images/saucy_hedgehog_transparent.png" width="200" height="200" class="mx-auto d-block" alt="">
                 </div>
-
+                <img src="" alt="" >
                 <p class="about">
-                    <span style="font-size: 24px; font-weight: bold">ABOUT</span><br>
+                    <span style="font-size: 24px; font-weight: bold; color: rgb(253, 126, 20);">ABOUT</span><br>
                     The Spicy Hedgehog is a family friendly restaurant that specializes in typically American cuisine with a spicy twist. We serve breakfast, lunch, and dinner, and our entire menu is available the entire day.
                 </p><hr>
 
                 <p class="paragraph">
-                    <span style="font-size: 24px; font-weight: bold">HOURS</span><br>
+                    <span style="font-size: 24px; font-weight: bold; color: white">HOURS</span><br>
                     Monday: 6:00 AM - 9:00 PM<br>
                     Tuesday: 6:00 AM - 9:00 PM<br>
                     Wednesday: 6:00 AM - 9:00 PM<br>
