--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -1,5 +1,15 @@
 <div class="container">
   <div class="row">
+    <div class="col"></div>
+    <div class="col-6">
+      <div class="carousel-item active">
+        <img src="/assets/images/Restaraunt_Exterior.png" alt="" style="margin-top: 20px;" width=100%>
+        <h1 class="carousel-caption">Our Locations</h1>
+      </div>
+    </div>
+    <div class="col"></div>
+  </div>
+  <div class="row">
       <div class="col">
       </div>
 
@@ -29,7 +39,7 @@
           </div>
         </div>
 
-        <h1>Our Locations</h1>
+        
         <div class="card mx-auto" *ngFor="let location of locationList">
           <div *ngIf="locationToEdit != location">
             <div class="card-header" style="color: white">
