fixed text coloring

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,12 +10,12 @@
                 </div>
                 <img src="" alt="" >
                 <p class="about">
-                    <span style="font-size: 24px; font-weight: bold; color: rgb(253, 126, 20);">ABOUT</span><br>
+                    <span style="font-size: 24px; font-weight: bold;">ABOUT</span><br>
                     The Spicy Hedgehog is a family friendly restaurant that specializes in typically American cuisine with a spicy twist. We serve breakfast, lunch, and dinner, and our entire menu is available the entire day.
                 </p><hr>
 
                 <p class="paragraph">
-                    <span style="font-size: 24px; font-weight: bold; color: white">HOURS</span><br>
+                    <span style="font-size: 24px; font-weight: bold;">HOURS</span><br>
                     Monday: 6:00 AM - 9:00 PM<br>
                     Tuesday: 6:00 AM - 9:00 PM<br>
                     Wednesday: 6:00 AM - 9:00 PM<br>
