--- a/src/app/menu-category-add-card/menu-category-add-card.component.html
+++ b/src/app/menu-category-add-card/menu-category-add-card.component.html
@@ -12,7 +12,7 @@
           <input class="form-control" type="text" [(ngModel)]="picture" placeholder="Food Category Picture URL">
         </div>
         <div class="form-group">
-          <button class="btn btn-primary" (click)="add()">Add Food Catigorie</button>
+          <button class="btn btn-primary" (click)="add()">Add Food Category</button>
         </div>
       </div>
     </div>
