--- a/src/app/menu-item-card-add/menu-item-card-add.component.html
+++ b/src/app/menu-item-card-add/menu-item-card-add.component.html
@@ -3,7 +3,7 @@
   <div class="card">
       <div class="card-body">
           <div class="form-group">
-              <input class="form-control" type="text" [(ngModel)]="name" placeholder="Food Category Name">
+              <input class="form-control" type="text" [(ngModel)]="name" placeholder="Food Name">
           </div>
           <div class="form-group">
               <input class="form-control" type="text" [(ngModel)]="description"
@@ -13,7 +13,7 @@
               <input class="form-control" type="text" [(ngModel)]="picture" placeholder="Food Picture URL">
           </div>
           <div class="form-group">
-              <button class="btn btn-primary" (click)="add()">Add Food Catigorie</button>
+              <button class="btn btn-primary" (click)="add()">Add Food Item</button>
           </div>
       </div>
   </div>
