--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
                 <img src="" alt="" >
                 <p class="about">
                     <span style="font-size: 24px; font-weight: bold;">ABOUT</span><br>
-                    The Spicy Hedgehog bring the heat to typically American cuisine. These spicy treats will scorch your palate and make it cry for mercy. This is a family friendly, so our menu does have items for the feint of heart.
+                    The Spicy Hedgehog brings the heat to typical American cuisine. These spicy treats will scorch your palate and make it cry for mercy. This is a family friendly, so our menu does have items for the feint of heart.
                 </p><hr>
 
                 <p class="paragraph">
