changed url's for final production version

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="background" style="background-image: url('/assets/images/Restaraunt_Interior.png');">
+<div class="background" style="background-image: url('./assets/images/Restaraunt_Interior.png');">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -6,7 +6,7 @@
 
             <div class="col-6" style="box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, .9);">
                 <div class="logo">
-                    <img src="/assets/images/saucy_hedgehog_transparent.png" width="200" height="200" class="mx-auto d-block" alt="">
+                    <img src="./assets/images/saucy_hedgehog_transparent.png" width="200" height="200" class="mx-auto d-block" alt="">
                 </div>
                 <img src="" alt="" >
                 <p class="about">
