--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -3,7 +3,7 @@
     <div class="col"></div>
     <div class="col-6">
       <div class="carousel-item active">
-        <img src="/assets/images/Restaraunt_Exterior.png" alt="" style="margin-top: 20px;" width=100%>
+        <img src="./assets/images/Restaraunt_Exterior.png" alt="" style="margin-top: 20px;" width=100%>
         <h1 class="carousel-caption">Our Locations</h1>
       </div>
     </div>
