--- a/src/app/menu-category-card/menu-category-card.component.html
+++ b/src/app/menu-category-card/menu-category-card.component.html
@@ -2,7 +2,7 @@
 <div (click)="onClick()">
     <div class="card" style="width: 18rem; height: 250px; background-color: coral;">
         <img width = "190" height = "190" class="card-img-top" [src]="category.image" alt="Card image cap">
-        <h5 class="card-header" style="color: white">
+        <h5 class="card-body" style="color: white">
             {{category.name}}
         </h5>
         <div class="overlay">
