--- a/src/app/menu-item-card/menu-item-card.component.html
+++ b/src/app/menu-item-card/menu-item-card.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card" style="width: 18rem; height: 250px; background-color: coral;">
     <img width = "190" height = "190" class="card-img-top" [src]="menuItem.image" alt="Card image cap">
-    <h5 class="card-header" style="color: white">
+    <h5 class="card-body" style="color: white">
       {{menuItem.name}}
     </h5>
     <div class="overlay">
