--- a/src/app/menu-item-page/menu-item-page.component.html
+++ b/src/app/menu-item-page/menu-item-page.component.html
@@ -3,21 +3,17 @@
   <app-menu-item-card-add (refreshData)="refreshData()"></app-menu-item-card-add>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col">
-    <a (click)="back()">
+  <div style="text-align: center;">
+    <a (click)="back()" style="float: left;">
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
       </svg>
     </a>
+    <h1 style="display: inline; margin-left: -16px;">{{category}}</h1>
   </div>
-  <div class="col">
-    <h1 class="text-center" style="display: inline;">{{category}}</h1>
-  </div>
-  </div>
-  <div class="row row-col-sm-1 row-cols-md-2 row-cols-lg-3">
+  <div class="card-deck">
       <div *ngFor="let menuItem of menuItems; index as i">
-          <div class="col" style="margin-top:10px; margin-bottom: 10px">
+          <div class="col" style="margin-left: 12px; margin-top:10px; margin-bottom: 10px">
               <app-menu-item-card [index]='i'></app-menu-item-card>
           </div>
       </div>
